# udemobile

./: proje_durumu.txt  proje_tam_arsiv.txt
.github/workflows/: android.yml
frontend/: package-lock.json  package.json
frontend/src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
yedek_v1/: Cargo.toml
yedek_v1/frontend/: index.html
yedek_v1/frontend/src/: main.ts
yedek_v1/src/: main.rs  udf_manager.rs
