[package]
name = "uyap-editor"
version = "0.1.0"
description = "UYAP UDF Editor Android"
authors = ["Said Surucu"]
edition = "2021"

[lib]
name = "uyap_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "^2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "8.6.0"
